--- a/index.html
+++ b/index.html
@@ -4,27 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pratikum Modul 0.2</title>
-
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        text-align: center;
-        padding: 60px;
-      }
-
-      h1 {
-        color: #333;
-        margin-bottom: 20px;
-      }
-    </style>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Pratikum HTML+CSS Modul 0.2</h1>
+    <h1>Selamat Datang</h1>
 
-    <a href="internal.html">Internal CSS</a>
-    <p>Dan</p>
-    <a href="eksternal.html">Eksternal CSS</a>
+    <pre>
+        <div class="border-love">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Cupiditate temporibus aut eius ut adipisci libero provident assumenda
+         vel alias suscipit perspiciatis amet ratione maxime, soluta ducimus eos blanditiis! 
+        Sequi, libero.
+        </div>
+    </pre>
+
+    <p>Cinta di sekelilingku</p>
   </body>
 </html>
