--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+
     <h1>Selamat Datang</h1>
 
     <pre>
@@ -19,6 +28,34 @@
         </div>
     </pre>
 
-    <p>Cinta di sekelilingku</p>
+    <p>Cinta di sekelilingku😽</p>
+
+    <table>
+      <tr>
+        <td>Nama Lengkap Anda :</td>
+        <td></td>
+        <td>Raffida Fathiyya Ramadhania</td>
+      </tr>
+
+      <tr>
+        <td>Kelas Anda :</td>
+        <td></td>
+        <td>XI RPL</td>
+      </tr>
+    </table>
+
+    <h3>Daftar siswa XI RPL</h3>
+    <ul>
+      <li>Ahn Hyo Seop</li>
+      <li>Cibia</li>
+      <li>Paul ahn</li>
+    </ul>
+
+    <h3>Daftar siswa XII RPL</h3>
+    <ol>
+      <li>Chen Haoran</li>
+      <li>Li Yunxi</li>
+      <li>Kim Dokja</li>
+    </ol>
   </body>
 </html>
